<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/task_app_red"
    tools:context=".Signup">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginEnd="0dp"
                    android:text=" Here’s your first step with us! \n "
                    android:textColor="@color/whiteTextColor">

                </TextView>

            </RelativeLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:hint="Name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:hint="Mobile no."
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        app:endIconMode="password_toggle"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="5dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@color/task_app_red"
                            android:text="Register"
                            android:textColor="#FFFFFF" /> <!-- Adjust the text color to improve contrast -->


                    </androidx.cardview.widget.CardView>
                    <TextView
                        style="@style/parent"
                        android:id="@+id/gotologin"
                        android:height="48dp"
                        android:onClick="onLoginClick"
                        android:text="@string/already_have_an_account"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>